# Azurchat

./: Contact.py  README  README.md  add_friend.py  add_friend.ui  api_dialog.py  api_dialog.ui  chara.py  chat.db  chat.py  chat_info.py  chat_item.py  chat_page.py  config.json  custom.py  db.py  form.ui  form.ui.EVSjbq  form.ui.autosave  form2.py  form_chara.ui  form_chat.ui  form_info.ui  fr.py  fr.ui  fr_widget.py  friend.py  friend.ui  friend_item.py  go.qrc  head.qrc  hipper.txt  login.py  login.py.autosave  login.ui  main.py  my.py  person.ui  personRecord.ui  personcord.py  (+24 more)
prompt/: enterprise.txt  hipper.txt  info.json  newjersey.txt  tashkent.txt  temp.txt  yorktown.txt
